--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="logo-area">
         <h1>
             <img src="./img/Music Record.svg" alt="Logo MPB Brasil" class="logo-icon">
-            MPB <br> BRASIL
+            <a href="./pesquisar-artista.html"> MPB <br> BRASIL </a>
         </h1>
     </div>
     <div class="search-container">
